--- a/factgenie/templates/crowdsourcing_detail.html
+++ b/factgenie/templates/crowdsourcing_detail.html
@@ -12,52 +12,54 @@
   <script src="{{ host_prefix }}/static/js/bootstrap.min.js"></script>
 </head>
 
-{% include 'navbar.html' %}
+<body>
+  {% include 'navbar.html' %}
 
-<div class="container w-50 mt-5">
+  <div class="container w-50 mt-5">
 
-  <div class="mt-5">
-    <a href="{{ host_prefix }}/crowdsourcing" class="btn btn-outline-secondary mb-5">← List of campaigns</a>
-    <h3><b>{{ campaign_id }}</b></h3>
+    <div class="mt-5">
+      <a href="{{ host_prefix }}/crowdsourcing" class="btn btn-outline-secondary mb-5">← List of campaigns</a>
+      <h3><b>{{ campaign_id }}</b></h3>
 
-    <div class="card text-center">
-      <div class="card-body">
-        <h5 class="card-title">Crowdsourcing page link</h5>
-        <p><small class="text-muted">Use this link for your crowdsourcing service.</small></p>
-        <p class="card-text"><span class="font-monospace">{{ request.url | annotate_url }}?campaign={{
-            campaign_id }}</span>
-        </p>
+      <div class="card text-center">
+        <div class="card-body">
+          <h5 class="card-title">Crowdsourcing page link</h5>
+          <p><small class="text-muted">Use this link for your crowdsourcing service.</small></p>
+          <p class="card-text"><span class="font-monospace">{{ request.url | annotate_url }}?campaign={{
+              campaign_id }}</span>
+          </p>
+        </div>
+      </div>
+
+      <div id="campaign-status">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th scope="col">Batch index</th>
+              <th scope="col">Examples</th>
+              <th scope="col">Status</th>
+              <th scope="col">Annotator id</th>
+              <th scope="col">Start time</th>
+              <th scope="col">Elapsed</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for batch in db %}
+            <tr>
+              <td>{{ batch.batch_idx }}</td>
+              <td>{{ batch.example_cnt }}</td>
+              <td>{{ batch.status }}</td>
+              <td>{{ batch.annotator_id }}</td>
+              <td>{{ batch.start | ctime }}</td>
+              <td>{{ batch.start | elapsed }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+
       </div>
     </div>
-
-    <div id="campaign-status">
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th scope="col">Batch index</th>
-            <th scope="col">Examples</th>
-            <th scope="col">Status</th>
-            <th scope="col">Annotator id</th>
-            <th scope="col">Start time</th>
-            <th scope="col">Elapsed</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for batch in db %}
-          <tr>
-            <td>{{ batch.batch_idx }}</td>
-            <td>{{ batch.example_cnt }}</td>
-            <td>{{ batch.status }}</td>
-            <td>{{ batch.annotator_id }}</td>
-            <td>{{ batch.start | ctime }}</td>
-            <td>{{ batch.start | elapsed }}</td>
-          </tr>
-          {% endfor %}
-        </tbody>
-
-    </div>
   </div>
-</div>
+</body>
 <script>
   // variable to be used in factgenie.js
   window.url_prefix = "{{ host_prefix }}";
