--- a/factgenie/templates/index.html
+++ b/factgenie/templates/index.html
@@ -12,81 +12,82 @@
   <script src="{{ host_prefix }}/static/js/bootstrap.min.js"></script>
 </head>
 
-{% include 'navbar.html' %}
+<body>
+  {% include 'navbar.html' %}
 
-<div class="container">
-  <div class="row mt-5">
-    <!-- <b>Actions</b> -->
-    <div class="col-md-4">
-      <div class="card text-center mt-3" style="min-width: 100%;">
-        <div class="card-body">
-          <a href="{{ host_prefix }}/browse">
-            <img src="{{ host_prefix }}/static/img/book.png" class="intro-img">
-            <h5 class="card-title">Browse</h5>
-          </a>
-          <p class="card-text">View data and annotations.</p>
+  <div class="container">
+    <div class="row mt-5">
+      <!-- <b>Actions</b> -->
+      <div class="col-md-4">
+        <div class="card text-center mt-3" style="min-width: 100%;">
+          <div class="card-body">
+            <a href="{{ host_prefix }}/browse">
+              <img src="{{ host_prefix }}/static/img/book.png" class="intro-img">
+              <h5 class="card-title">Browse</h5>
+            </a>
+            <p class="card-text">View data and annotations.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card text-center mt-3">
+          <div class="card-body">
+            <a href="{{ host_prefix }}/llm_eval">
+              <img src="{{ host_prefix }}/static/img/llm.png" class="intro-img">
+              <h5 class="card-title">Annotate with LLMs</h5>
+            </a>
+            <p class="card-text">Collect model annotations.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card text-center mt-3">
+          <div class="card-body">
+            <a href="{{ host_prefix }}/crowdsourcing">
+              <img src="{{ host_prefix }}/static/img/pencil.png" class="intro-img">
+              <h5 class="card-title">Annotate with human annotators</h5>
+            </a>
+            <p class="card-text">Collect human annotations.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card text-center mt-3">
+          <div class="card-body">
+            <a href="{{ host_prefix }}/datasets">
+              <img src="{{ host_prefix }}/static/img/datasets.png" class="intro-img">
+              <h5 class="card-title">Datasets</h5>
+            </a>
+            <p class="card-text">Manage datasets.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card text-center mt-3">
+          <div class="card-body">
+            <a href="{{ host_prefix }}/model_outputs">
+              <img src="{{ host_prefix }}/static/img/output.png" class="intro-img">
+              <h5 class="card-title">Model outputs</h5>
+            </a>
+            <p class="card-text">Manage model outputs.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card text-center mt-3">
+          <div class="card-body">
+            <a href="{{ host_prefix }}/about">
+              <img src="{{ host_prefix }}/static/img/info.png" class="intro-img">
+              <h5 class="card-title">About</h5>
+            </a>
+            <p class="card-text">More details.</p>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="card text-center mt-3">
-        <div class="card-body">
-          <a href="{{ host_prefix }}/llm_eval">
-            <img src="{{ host_prefix }}/static/img/llm.png" class="intro-img">
-            <h5 class="card-title">Annotate with LLMs</h5>
-          </a>
-          <p class="card-text">Collect model annotations.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card text-center mt-3">
-        <div class="card-body">
-          <a href="{{ host_prefix }}/crowdsourcing">
-            <img src="{{ host_prefix }}/static/img/pencil.png" class="intro-img">
-            <h5 class="card-title">Annotate with human annotators</h5>
-          </a>
-          <p class="card-text">Collect human annotations.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card text-center mt-3">
-        <div class="card-body">
-          <a href="{{ host_prefix }}/datasets">
-            <img src="{{ host_prefix }}/static/img/datasets.png" class="intro-img">
-            <h5 class="card-title">Datasets</h5>
-          </a>
-          <p class="card-text">Manage datasets.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card text-center mt-3">
-        <div class="card-body">
-          <a href="{{ host_prefix }}/model_outputs">
-            <img src="{{ host_prefix }}/static/img/output.png" class="intro-img">
-            <h5 class="card-title">Model outputs</h5>
-          </a>
-          <p class="card-text">Manage model outputs.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card text-center mt-3">
-        <div class="card-body">
-          <a href="{{ host_prefix }}/about">
-            <img src="{{ host_prefix }}/static/img/info.png" class="intro-img">
-            <h5 class="card-title">About</h5>
-          </a>
-          <p class="card-text">More details.</p>
-        </div>
-      </div>
-    </div>
-  </div>
+</body>
 
-
-  <script>
-    // variable to be used in factgenie.js
-    window.url_prefix = "{{ host_prefix }}";
-  </script>
+<script>
+  // variable to be used in factgenie.js
+  window.url_prefix = "{{ host_prefix }}";
+</script>
