--- a/factgenie/templates/login.html
+++ b/factgenie/templates/login.html
@@ -12,33 +12,34 @@
   <script src="{{ host_prefix }}/static/js/bootstrap.min.js"></script>
 </head>
 
-{% include 'navbar.html' %}
+<body>
+  {% include 'navbar.html' %}
 
-<div class="container">
-  <div class="form-container">
-    <div class="mt-5 form-box">
-      <form action="{{ host_prefix }}/login" method="post">
-        <div class="mb-3 row">
-          <label for="username" class="col-sm-4 col-form-label">Username:</label>
-          <div class="col-sm-8">
-            <input type="text" class="form-control" id="username" name="username">
+  <div class="container">
+    <div class="form-container">
+      <div class="mt-5 form-box">
+        <form action="{{ host_prefix }}/login" method="post">
+          <div class="mb-3 row">
+            <label for="username" class="col-sm-4 col-form-label">Username:</label>
+            <div class="col-sm-8">
+              <input type="text" class="form-control" id="username" name="username">
+            </div>
           </div>
-        </div>
-        <div class="mb-3 row">
-          <label for="password" class="col-sm-4 col-form-label">Password:</label>
-          <div class="col-sm-8">
-            <input type="password" class="form-control" id="password" name="password">
+          <div class="mb-3 row">
+            <label for="password" class="col-sm-4 col-form-label">Password:</label>
+            <div class="col-sm-8">
+              <input type="password" class="form-control" id="password" name="password">
+            </div>
           </div>
-        </div>
-        <div class="d-flex justify-content-center">
-          <button type="submit" class="btn btn-primary" value="Login">Submit</button>
-        </div>
-      </form>
+          <div class="d-flex justify-content-center">
+            <button type="submit" class="btn btn-primary" value="Login">Submit</button>
+          </div>
+        </form>
+      </div>
     </div>
+
   </div>
-
-</div>
-
+</body>
 
 <script>
   // variable to be used in factgenie.js
