--- a/factgenie/static/css/custom.css
+++ b/factgenie/static/css/custom.css
@@ -147,7 +147,7 @@ pre {
 }
 
 #outputarea {
-    margin-top: 20px;
+    /* margin-top: 20px; */
     /* font-family: "IBM Plex Mono", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; */
     padding: 10px;
     /* font-size: 16px; */
@@ -771,7 +771,9 @@ a:hover {
 }
 
 #sidepanel-content {
-    padding: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 15px;
 }
 
 
