--- a/factgenie/templates/browse.html
+++ b/factgenie/templates/browse.html
@@ -119,15 +119,11 @@
 
         <div id="rightpanel" class="collapse show">
           <div id='sidepanel-content' class="tab-content">
-            <div id='setuparea'>
-              <!-- <ul class="list-inline">
-                <li class="list-inline-item"><small class="text-muted">Annotations</small></li>
-                <li class="list-inline-item"><select class="form-select form-select-sm" id="annotations-select">
-                  </select></li>
-              </ul> -->
-
+            <div id='setuparea' style="display: none">
               <!-- inline buttons -->
-              <div><small class="text-muted"><i class="fa fa-pencil"></i> Annotations</small></div>
+              <div>
+                <small class="text-muted"><i class="fa fa-pencil"></i> Annotations</small>
+              </div>
               <p class="d-inline-flex gap-1" id="annotations-select">
               </p>
             </div>
