--- a/factgenie/static/css/custom.css
+++ b/factgenie/static/css/custom.css
@@ -869,3 +869,8 @@ a:hover {
 .btn-err-cat-label.active {
     font-weight: bold;
 }
+
+.btn-ann-select {
+    /* box-shadow: 0 1px 2px darkslategray; */
+    border: 1px solid #ddd;
+}
