--- a/factgenie/templates/llm_eval_detail.html
+++ b/factgenie/templates/llm_eval_detail.html
@@ -20,7 +20,7 @@
 
     <div class="mt-5">
       <a href="{{ host_prefix }}/llm_eval" class="btn btn-outline-secondary mb-5">← List of LLM evals</a>
-      <h3><b>{{ campaign_id }}</b></h3>
+      <h3><img src="{{ host_prefix }}/static/img/llm.png" class="inline-icon"> <b>{{ campaign_id }}</b></h3>
 
       <div id="metadata-block" class="mt-3">
         <hr>
