--- a/factgenie/templates/crowdsourcing_detail.html
+++ b/factgenie/templates/crowdsourcing_detail.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" media="screen" href="{{ host_prefix }}/static/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="{{ host_prefix }}/static/css/custom.css">
   <link rel="shortcut icon" href="{{ host_prefix }}/static/img/favicon.ico">
+  <link href="{{ host_prefix }}/static/css/font-awesome.css" rel="stylesheet">
   <meta name="viewport" content="width=1024">
   <script src="{{ host_prefix }}/static/js/jquery.min.js"></script>
   <script src="{{ host_prefix }}/static/js/popper.min.js"></script>
@@ -19,24 +20,41 @@
 
     <div class="mt-5">
       <a href="{{ host_prefix }}/crowdsourcing" class="btn btn-outline-secondary mb-5">← List of campaigns</a>
-      <h3><b>{{ campaign_id }}</b></h3>
-
-      <div class="card text-center">
-        <div class="card-body">
-          <h5 class="card-title">Crowdsourcing page link</h5>
-          <p><small class="text-muted">Use this link for your crowdsourcing service.</small></p>
-          <p class="card-text"><span class="font-monospace">{{ request.url | annotate_url }}?campaign={{
-              campaign_id }}</span>
-          </p>
+      <h3><img src="{{ host_prefix }}/static/img/pencil.png" class="inline-icon"> <b>{{ campaign_id }}</b></h3>
+      <div id="metadata-block" class="mt-3">
+        <hr>
+        <dl class="row">
+          <dt class="col-sm-3"> Page link </dt>
+          <dd class="col-sm-9" id="metadata-status"> <span class="font-mono">{{ request.url | annotate_url
+              }}?campaign={{
+              campaign_id }}</span> </dd>
+          <dt class="col-sm-3"> Created </dt>
+          <dd class="col-sm-9" id="metadata-created"> {{ metadata.created }} </dd>
+          <dt class="col-sm-3"> Examples </dt>
+          <dd class="col-sm-9" id="metadata-example-cnt"> {{ finished_examples | length }} / {{ overview | length }}
+          </dd>
+        </dl>
+        <div>
+          <a href="{{ host_prefix }}/export_annotations?campaign={{ campaign_id }}" class="btn btn-outline-secondary"
+            data-bs-toggle="tooltip" id="download-button" title="Export annotations" {% if metadata.status=='idle' %}
+            style="display: none;" {% endif %}>
+            <i class="fa fa-download"></i> Download annotations
+          </a>
+          <a type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#config-modal"><i
+              class="fa fa-cog"></i> Show
+            configuration</a>
         </div>
+        <div id="log-area" class="font-monospace mt-3"></div>
+        <hr>
       </div>
 
       <div id="campaign-status">
+        <h4>Batches</h4>
         <table class="table table-striped">
           <thead>
             <tr>
-              <th scope="col">Batch index</th>
-              <th scope="col">Examples</th>
+              <th scope="col">#</th>
+              <th scope="col">Size</th>
               <th scope="col">Status</th>
               <th scope="col">Annotator id</th>
               <th scope="col">Start time</th>
@@ -44,7 +62,7 @@
             </tr>
           </thead>
           <tbody>
-            {% for batch in db %}
+            {% for batch in overview %}
             <tr>
               <td>{{ batch.batch_idx }}</td>
               <td>{{ batch.example_cnt }}</td>
@@ -59,6 +77,7 @@
       </div>
     </div>
   </div>
+  {% include 'forms/config_modal.html' %}
 </body>
 <script>
   // variable to be used in factgenie.js
