--- a/factgenie/templates/llm_eval_detail.html
+++ b/factgenie/templates/llm_eval_detail.html
@@ -92,7 +92,7 @@
                   <td>{{ example.split }}</td>
                   <td>{{ example.example_idx }}</td>
 
-                  <td><span id="statusBtn{{ rowId }}" class="badge bg-secondary">{{ example.status }}</span>
+                  <td><span class="badge bg-secondary">{{ example.status }}</span>
                   </td>
                   <!-- use collapse for hiding annotations -->
                   <td>
@@ -116,8 +116,8 @@
                   </td>
                 </tr>
                 </tr>
+                <!-- correct striping -->
                 <tr>
-
                 </tr>
                 {% endfor %}
               </tbody>
