--- a/factgenie/templates/navbar.html
+++ b/factgenie/templates/navbar.html
@@ -7,9 +7,13 @@
 
 
 <img src="{{ host_prefix }}/static/img/info.png" data-bs-toggle="modal" data-bs-target="#aboutModal"
-    style="cursor: pointer; position: absolute; top: 0; right: 0; margin-right: 60px; margin-top:16px; height: 30px;">
+    style="cursor: pointer; position: absolute; top: 0; right: 0; margin-right: 15px; margin-top:16px; height: 30px;">
 
 
+<a href="https://github.com/kasnerz/factgenie/" target="_blank"
+    style="position: absolute; top: 0; right: 0; margin-right: 60px; margin-top:15px;">
+    <img src="{{ host_prefix }}/static/img/github.png" height="30px">
+</a>
 
 <div class="modal fade" id="aboutModal" tabindex="-1" aria-labelledby="aboutModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -47,10 +51,3 @@
         </div>
     </div>
 </div>
-
-
-<!-- add a github link with the github icon to the right corner -->
-<a href="https://github.com/kasnerz/factgenie/" target="_blank"
-    style="position: absolute; top: 0; right: 0; margin: 15px;">
-    <img src="{{ host_prefix }}/static/img/github.png" height="30px">
-</a>
